Fix css and profil count alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -126,8 +126,14 @@ footer{
     background-color: rgba(113, 142, 179, 0.089);
     padding:0.7%;
     border-style: solid;
-    border-color:#0000ac48;
+    color: var(--etml-white);
+    background-color: var(--etml-blueW);
+    text-align: center;
+    margin-top: 1%;
+    margin-left: 40%;
+    margin-right: 40%;
     margin-bottom:auto;
+    border-radius: 20px;
 }
 @media (max-width: 600px) {
 
